--- a/www/views/home/home.html
+++ b/www/views/home/home.html
@@ -1,14 +1,20 @@
 <ion-view view-title="Aloha Resort" hide-back-button="true">
   <ion-content>
     <div class="list">
-      <a href="#/reservation" class="item item-icon-left">
-        <i class="icon ion-document-text"></i> See your reservation
+      <a href="#/schedule" class="item item-icon-left">
+        <i class="icon ion-document-text"></i> Schedule
       </a>
       <a href="#/weather" class="item item-icon-left">
-        <i class="icon ion-ios-partlysunny"></i> Current weather
+        <i class="icon ion-ios-partlysunny"></i> Weather
       </a>
-      <a href="#/restaurants" class="item item-icon-left">
-        <i class="icon ion-fork"></i> Nearby restaurants
+      <a href="#/messages" class="item item-icon-left">
+        <i class="icon ion-fork"></i> Messages
+      </a>
+      <a href="#/favorites" class="item item-icon-left">
+        <i class="icon ion-fork"></i> Favorites
+      </a>
+      <a href="#/lostAndFound" class="item item-icon-left">
+        <i class="icon ion-fork"></i> Lost and Found
       </a>
     </div>
   </ion-content>
